--- a/算法测试2015-09-24/算法测试2015-09-24.csproj
+++ b/算法测试2015-09-24/算法测试2015-09-24.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AESHelper.cs" />
     <Compile Include="PEM_Changer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
